Remove stub data in operations

--- a/index.html
+++ b/index.html
@@ -71,29 +71,17 @@
       projects = [
         proj0 = {
           id: "amsterdam",
-          current: [
-            [123,12],
-            [121.72,17.6]
-          ],
-          upcoming: [
-            [121,14.6]
-          ]
+          current: [],
+          upcoming: []
         },
         proj1 = {
           id: "baltimore",
-          current: [
-            [122,12.2]
-          ],
-          upcoming: [
-            [121,14.6]
-          ]
+          current: [],
+          upcoming: []
         },
         proj2 = {
           id: "casablanca",
-          current: [
-            [122,13.1],
-            [121.72,10]
-          ],
+          current: [],
           upcoming: []
         }
       ]
